--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        maven { url = "https://files.minecraftforge.net/maven" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
@@ -20,54 +20,61 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
+    version = "1.12.2-14.23.5.2847"
     runDir = "run"
-       
+    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20171003"
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 repositories {
-    maven { url = "https://minecraft.curseforge.com/api/maven/"}
-	maven { url = "http://dvs1.progwml6.com/files/maven"}
-	maven { url = "https://modmaven.k-4u.nl"}
-    maven { url = "https://www.cursemaven.com"}
-    maven { url uri('localmaven')}
+    maven {
+		url = "https://maven.minecraftforge.net/"
 	}
+	flatDir {
+		dirs("src/libs")
+	}
+}
 
 dependencies {
-    deobfCompile "projecte:ProjectE:1.12.2:${projecte_version}"
-    deobfCompile "curse.maven:baubles:2518667"
-    // compile against the JEI API but do not include it at runtime
-    deobfProvided "mezz.jei:jei_${mc_version}:${jei_version}:api"
-    runtime "mezz.jei:jei_${mc_version}:${jei_version}"
-    deobfCompile "just-enough-resources-jer:JustEnoughResources:1.12.2:0.8.9.48"
-
-    compile fileTree([dir: 'libs', include: '*.jar'])
+	compile name:"Baubles-1.12-1.5.2"
+	compile name:"jei_1.12.2-4.16.1.301"
+	compile name:"JustEnoughResources-1.12.2-0.8.9.48"
+	compile name:"ProjectE-1.12.2-PE1.4.1"
 }
 
 processResources {
+    // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
 
+    // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
                 
+        // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-	
+        
+    // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
 }
 
-sourceSets {
-    api
-    main {
-        compileClasspath += sourceSets.api.output
-        runtimeClasspath += sourceSets.api.output
-    }
-    test {
-        compileClasspath += sourceSets.api.output
-        runtimeClasspath += sourceSets.api.output
-    }
-}
+// sourceSets {
+//     api
+//     main {
+//         compileClasspath += sourceSets.api.output
+//         runtimeClasspath += sourceSets.api.output
+//     }
+//     test {
+//         compileClasspath += sourceSets.api.output
+//         runtimeClasspath += sourceSets.api.output
+//     }
+// }
